--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.19.1
+  http: ^0.13.4
+  google_sign_in: ^5.4.0
+
 
 dev_dependencies:
   flutter_test:
