--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^1.19.1
   http: ^0.13.4
   google_sign_in: ^5.4.0
+  firebase_auth: ^3.5.1
+  image_picker: ^0.8.5+3
+  video_player: ^2.4.5
 
 
 dev_dependencies:
