--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.5.1
   image_picker: ^0.8.5+3
   video_player: ^2.4.5
+  flutter_signin_button: ^2.0.0
 
 
 dev_dependencies:
