--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   image_picker: ^0.8.5+3
   video_player: ^2.4.5
   flutter_signin_button: ^2.0.0
+  firebase_storage: ^10.3.4
+  cloud_firestore: ^3.4.3
 
 
 dev_dependencies:
